# PersonaEval

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml.example
personaeval/: __init__.py  cli.py  config.py  dataset_prepare.py  evaluator.py  metrics.py  models.py  utils.py
